---
source: crates/agent/src/publications/specs.rs
expression: results
---
[
    ScenarioResult {
        draft_id: 0001020300000000,
        status: BuildFailed {
            incompatible_collections: [],
            evolution_id: None,
        },
        errors: [
            "Materialization 'acmeCo/from-deleted' has invalid `sourceCapture`: expected 'acmeCo/deleted/thing' to be a Capture, but it does not exist (or was deleted)",
            "Materialization 'acmeCo/from-invalid-name' `sourceCapture` 'no-slash' is not a valid catalog name",
            "Materialization 'acmeCo/from-non-existant' has invalid `sourceCapture`: expected 'acmeCo/not/a/real/thing' to be a Capture, but it does not exist (or was deleted)",
            "Materialization 'acmeCo/from-wrong-spec-type' has invalid `sourceCapture`: expected 'acmeCo/matB/other-bindings' to be a Capture, but it is a materialization",
            "Specification 'acmeCo/from-unauthorized' is not read-authorized to `sourceCapture` prefix: 'coyoteCo/not/'.\nAvailable grants are: [\n  {\n    \"subject_role\": \"acmeCo/\",\n    \"object_role\": \"acmeCo/\",\n    \"capability\": \"admin\"\n  }\n]",
        ],
        live_specs: [],
    },
]
